# tymnl

./: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: ci.yml  release.yml
example-config/: tymnl.yml
src/: config-test.rs  config.rs  handlers.rs  main.rs  render-test.rs  render.rs  state.rs
src/templates/: error.typ  preamble.typ  tymnl.typ  welcome.typ
