[package]
name = "tymnl"
version = "0.1.0"
edition = "2024"

default-run = "tymnl"

[[bin]]
name = "render-test"
path = "src/render-test.rs"

[[bin]]
name = "config-test"
path = "src/config-test.rs"

[profile.release]
strip = true

[dependencies]
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "process",
    "sync",
] }
axum = { version = "0.8.8", default-features = false, features = [
    "http1",
    "http2",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
    "tracing",
] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.44"
chrono-tz = "0.10.4"
clap = { version = "4.5.60", features = ["derive"] }
fontdb = "0.23.0"
futures = "0.3.32"
image = "0.25.9"
png = "0.17"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tiny-skia = "0.11.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-render = "0.14.2"
trmnl = { version = "0.1.0", features = ["axum", "schedule"] }
serde_json = "1.0.149"
rand = "0.10.0"
notify-debouncer-full = "0.4"

[build-dependencies]
vergen-gix = "9"
